lib/miniaudio/miniaudio.auto.c.v


// MA_API ma_uint32 ma_peak2_get_latency(const ma_peak2* pFilter);
fn C.ma_peak2_get_latency(p_filter &C.ma_peak2) u32
[inline]
pub fn peak2_get_latency(p_filter &C.ma_peak2) u32 {
	return C.ma_peak2_get_latency(p_filter)
}

// MA_API ma_loshelf2_config ma_loshelf2_config_init(ma_format format, ma_uint32 channels, ma_uint32 sampleRate, double gainDB, double shelfSlope, double frequency);
fn C.ma_loshelf2_config_init(format Format, channels u32, sample_rate u32, gain_d_b f64, shelf_slope f64, frequency f64) C.ma_loshelf2_config
[inline]
pub fn loshelf2_config_init(format Format, channels u32, sample_rate u32, gain_d_b f64, shelf_slope f64, frequency f64) C.ma_loshelf2_config {
	return C.ma_loshelf2_config_init(format, channels, sample_rate, gain_d_b, shelf_slope,
		frequency)
}

// MA_API ma_result ma_loshelf2_init(const ma_loshelf2_config* pConfig, ma_loshelf2* pFilter);
fn C.ma_loshelf2_init(p_config &C.ma_loshelf2_config, p_filter &C.ma_loshelf2) Result
[inline]
pub fn loshelf2_init(p_config &C.ma_loshelf2_config, p_filter &C.ma_loshelf2) Result {
	return C.ma_loshelf2_init(p_config, p_filter)
}

// MA_API ma_result ma_loshelf2_reinit(const ma_loshelf2_config* pConfig, ma_loshelf2* pFilter);
fn C.ma_loshelf2_reinit(p_config &C.ma_loshelf2_config, p_filter &C.ma_loshelf2) Result
[inline]
pub fn loshelf2_reinit(p_config &C.ma_loshelf2_config, p_filter &C.ma_loshelf2) Result {
	return C.ma_loshelf2_reinit(p_config, p_filter)
}

// MA_API ma_result ma_loshelf2_process_pcm_frames(ma_loshelf2* pFilter, void* pFramesOut, const void* pFramesIn, ma_uint64 frameCount);
fn C.ma_loshelf2_process_pcm_frames(p_filter &C.ma_loshelf2, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result
[inline]
pub fn loshelf2_process_pcm_frames(p_filter &C.ma_loshelf2, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result {
	return C.ma_loshelf2_process_pcm_frames(p_filter, p_frames_out, p_frames_in, frame_count)
}

// MA_API ma_uint32 ma_loshelf2_get_latency(const ma_loshelf2* pFilter);
fn C.ma_loshelf2_get_latency(p_filter &C.ma_loshelf2) u32
[inline]
pub fn loshelf2_get_latency(p_filter &C.ma_loshelf2) u32 {
	return C.ma_loshelf2_get_latency(p_filter)
}

// MA_API ma_hishelf2_config ma_hishelf2_config_init(ma_format format, ma_uint32 channels, ma_uint32 sampleRate, double gainDB, double shelfSlope, double frequency);
fn C.ma_hishelf2_config_init(format Format, channels u32, sample_rate u32, gain_d_b f64, shelf_slope f64, frequency f64) C.ma_hishelf2_config
[inline]
pub fn hishelf2_config_init(format Format, channels u32, sample_rate u32, gain_d_b f64, shelf_slope f64, frequency f64) C.ma_hishelf2_config {
	return C.ma_hishelf2_config_init(format, channels, sample_rate, gain_d_b, shelf_slope,
		frequency)
}

// MA_API ma_result ma_hishelf2_init(const ma_hishelf2_config* pConfig, ma_hishelf2* pFilter);
fn C.ma_hishelf2_init(p_config &C.ma_hishelf2_config, p_filter &C.ma_hishelf2) Result
[inline]
pub fn hishelf2_init(p_config &C.ma_hishelf2_config, p_filter &C.ma_hishelf2) Result {
	return C.ma_hishelf2_init(p_config, p_filter)
}

// MA_API ma_result ma_hishelf2_reinit(const ma_hishelf2_config* pConfig, ma_hishelf2* pFilter);
fn C.ma_hishelf2_reinit(p_config &C.ma_hishelf2_config, p_filter &C.ma_hishelf2) Result
[inline]
pub fn hishelf2_reinit(p_config &C.ma_hishelf2_config, p_filter &C.ma_hishelf2) Result {
	return C.ma_hishelf2_reinit(p_config, p_filter)
}

// MA_API ma_result ma_hishelf2_process_pcm_frames(ma_hishelf2* pFilter, void* pFramesOut, const void* pFramesIn, ma_uint64 frameCount);
fn C.ma_hishelf2_process_pcm_frames(p_filter &C.ma_hishelf2, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result
[inline]
pub fn hishelf2_process_pcm_frames(p_filter &C.ma_hishelf2, p_frames_out voidptr, p_frames_in voidptr, frame_count u64) Result {
	return C.ma_hishelf2_process_pcm_frames(p_filter, p_frames_out, p_frames_in, frame_count)
}

// MA_API ma_uint32 ma_hishelf2_get_latency(const ma_hishelf2* pFilter);
fn C.ma_hishelf2_get_latency(p_filter &C.ma_hishelf2) u32
[inline]
pub fn hishelf2_get_latency(p_filter &C.ma_hishelf2) u32 {
	return C.ma_hishelf2_get_latency(p_filter)
}

// MA_API ma_linear_resampler_config ma_linear_resampler_config_init(ma_format format, ma_uint32 channels, ma_uint32 sampleRateIn, ma_uint32 sampleRateOut);
fn C.ma_linear_resampler_config_init(format Format, channels u32, sample_rate_in u32, sample_rate_out u32) C.ma_linear_resampler_config
[inline]
pub fn linear_resampler_config_init(format Format, channels u32, sample_rate_in u32, sample_rate_out u32) C.ma_linear_resampler_config {
	return C.ma_linear_resampler_config_init(format, channels, sample_rate_in, sample_rate_out)
}

// MA_API ma_result ma_linear_resampler_init(const ma_linear_resampler_config* pConfig, ma_linear_resampler* pResampler);
fn C.ma_linear_resampler_init(p_config &C.ma_linear_resampler_config, p_resampler &C.ma_linear_resampler) Result
[inline]
pub fn linear_resampler_init(p_config &C.ma_linear_resampler_config, p_resampler &C.ma_linear_resampler) Result {
	return C.ma_linear_resampler_init(p_config, p_resampler)
}

// MA_API void ma_linear_resampler_uninit(ma_linear_resampler* pResampler);
fn C.ma_linear_resampler_uninit(p_resampler &C.ma_linear_resampler)
[inline]
pub fn linear_resampler_uninit(p_resampler &C.ma_linear_resampler) {
	C.ma_linear_resampler_uninit(p_resampler)
}

// MA_API ma_result ma_linear_resampler_process_pcm_frames(ma_linear_resampler* pResampler, const void* pFramesIn, ma_uint64* pFrameCountIn, void* pFramesOut, ma_uint64* pFrameCountOut);
fn C.ma_linear_resampler_process_pcm_frames(p_resampler &C.ma_linear_resampler, p_frames_in voidptr, p_frame_count_in &u64, p_frames_out voidptr, p_frame_count_out &u64) Result
[inline]
pub fn linear_resampler_process_pcm_frames(p_resampler &C.ma_linear_resampler, p_frames_in voidptr, p_frame_count_in &u64, p_frames_out voidptr, p_frame_count_out &u64) Result {
	return C.ma_linear_resampler_process_pcm_frames(p_resampler, p_frames_in, p_frame_count_in,
		p_frames_out, p_frame_count_out)
}

// MA_API ma_result ma_linear_resampler_set_rate(ma_linear_resampler* pResampler, ma_uint32 sampleRateIn, ma_uint32 sampleRateOut);
fn C.ma_linear_resampler_set_rate(p_resampler &C.ma_linear_resampler, sample_rate_in u32, sample_rate_out u32) Result
[inline]
pub fn linear_resampler_set_rate(p_resampler &C.ma_linear_resampler, sample_rate_in u32, sample_rate_out u32) Result {
	return C.ma_linear_resampler_set_rate(p_resampler, sample_rate_in, sample_rate_out)
}

// MA_API ma_result ma_linear_resampler_set_rate_ratio(ma_linear_resampler* pResampler, float ratioInOut);
fn C.ma_linear_resampler_set_rate_ratio(p_resampler &C.ma_linear_resampler, ratio_in_out f32) Result
[inline]
pub fn linear_resampler_set_rate_ratio(p_resampler &C.ma_linear_resampler, ratio_in_out f32) Result {
	return C.ma_linear_resampler_set_rate_ratio(p_resampler, ratio_in_out)
}

// MA_API ma_uint64 ma_linear_resampler_get_required_input_frame_count(const ma_linear_resampler* pResampler, ma_uint64 outputFrameCount);
fn C.ma_linear_resampler_get_required_input_frame_count(p_resampler &C.ma_linear_resampler, output_frame_count u64) u64
[inline]
pub fn linear_resampler_get_required_input_frame_count(p_resampler &C.ma_linear_resampler, output_frame_count u64) u64 {
	return C.ma_linear_resampler_get_required_input_frame_count(p_resampler, output_frame_count)
}

// MA_API ma_uint64 ma_linear_resampler_get_expected_output_frame_count(const ma_linear_resampler* pResampler, ma_uint64 inputFrameCount);
fn C.ma_linear_resampler_get_expected_output_frame_count(p_resampler &C.ma_linear_resampler, input_frame_count u64) u64
[inline]
pub fn linear_resampler_get_expected_output_frame_count(p_resampler &C.ma_linear_resampler, input_frame_count u64) u64 {
	return C.ma_linear_resampler_get_expected_output_frame_count(p_resampler, input_frame_count)
}

// MA_API ma_uint64 ma_linear_resampler_get_input_latency(const ma_linear_resampler* pResampler);
fn C.ma_linear_resampler_get_input_latency(p_resampler &C.ma_linear_resampler) u64
[inline]
pub fn linear_resampler_get_input_latency(p_resampler &C.ma_linear_resampler) u64 {
	return C.ma_linear_resampler_get_input_latency(p_resampler)
}

// MA_API ma_uint64 ma_linear_resampler_get_output_latency(const ma_linear_resampler* pResampler);
fn C.ma_linear_resampler_get_output_latency(p_resampler &C.ma_linear_resampler) u64
[inline]
pub fn linear_resampler_get_output_latency(p_resampler &C.ma_linear_resampler) u64 {
	return C.ma_linear_resampler_get_output_latency(p_resampler)
}

// MA_API ma_resampler_config ma_resampler_config_init(ma_format format, ma_uint32 channels, ma_uint32 sampleRateIn, ma_uint32 sampleRateOut, ma_resample_algorithm algorithm);
fn C.ma_resampler_config_init(format Format, channels u32, sample_rate_in u32, sample_rate_out u32, algorithm C.ma_resample_algorithm) C.ma_resampler_config
[inline]
pub fn resampler_config_init(format Format, channels u32, sample_rate_in u32, sample_rate_out u32, algorithm C.ma_resample_algorithm) C.ma_resampler_config {
	return C.ma_resampler_config_init(format, channels, sample_rate_in, sample_rate_out,
		algorithm)
}

// MA_API ma_result ma_resampler_init(const ma_resampler_config* pConfig, ma_resampler* pResampler);
fn C.ma_resampler_init(p_config &C.ma_resampler_config, p_resampler &C.ma_resampler) Result
[inline]
pub fn resampler_init(p_config &C.ma_resampler_config, p_resampler &C.ma_resampler) Result {
	return C.ma_resampler_init(p_config, p_resampler)
}

// MA_API void ma_resampler_uninit(ma_resampler* pResampler);
fn C.ma_resampler_uninit(p_resampler &C.ma_resampler)
[inline]
pub fn resampler_uninit(p_resampler &C.ma_resampler) {
	C.ma_resampler_uninit(p_resampler)
}

// MA_API ma_result ma_resampler_process_pcm_frames(ma_resampler* pResampler, const void* pFramesIn, ma_uint64* pFrameCountIn, void* pFramesOut, ma_uint64* pFrameCountOut);
fn C.ma_resampler_process_pcm_frames(p_resampler &C.ma_resampler, p_frames_in voidptr, p_frame_count_in &u64, p_frames_out voidptr, p_frame_count_out &u64) Result
[inline]
pub fn resampler_process_pcm_frames(p_resampler &C.ma_resampler, p_frames_in voidptr, p_frame_count_in &u64, p_frames_out voidptr, p_frame_count_out &u64) Result {
	return C.ma_resampler_process_pcm_frames(p_resampler, p_frames_in, p_frame_count_in,
		p_frames_out, p_frame_count_out)
}

// MA_API ma_result ma_resampler_set_rate(ma_resampler* pResampler, ma_uint32 sampleRateIn, ma_uint32 sampleRateOut);
fn C.ma_resampler_set_rate(p_resampler &C.ma_resampler, sample_rate_in u32, sample_rate_out u32) Result
[inline]
pub fn resampler_set_rate(p_resampler &C.ma_resampler, sample_rate_in u32, sample_rate_out u32) Result {
	return C.ma_resampler_set_rate(p_resampler, sample_rate_in, sample_rate_out)
}

// MA_API ma_result ma_resampler_set_rate_ratio(ma_resampler* pResampler, float ratio);
fn C.ma_resampler_set_rate_ratio(p_resampler &C.ma_resampler, ratio f32) Result
[inline]
pub fn resampler_set_rate_ratio(p_resampler &C.ma_resampler, ratio f32) Result {
	return C.ma_resampler_set_rate_ratio(p_resampler, ratio)
}

// MA_API ma_uint64 ma_resampler_get_required_input_frame_count(const ma_resampler* pResampler, ma_uint64 outputFrameCount);
fn C.ma_resampler_get_required_input_frame_count(p_resampler &C.ma_resampler, output_frame_count u64) u64
[inline]
pub fn resampler_get_required_input_frame_count(p_resampler &C.ma_resampler, output_frame_count u64) u64 {
	return C.ma_resampler_get_required_input_frame_count(p_resampler, output_frame_count)
}

// MA_API ma_uint64 ma_resampler_get_expected_output_frame_count(const ma_resampler* pResampler, ma_uint64 inputFrameCount);
fn C.ma_resampler_get_expected_output_frame_count(p_resampler &C.ma_resampler, input_frame_count u64) u64
[inline]
pub fn resampler_get_expected_output_frame_count(p_resampler &C.ma_resampler, input_frame_count u64) u64 {
	return C.ma_resampler_get_expected_output_frame_count(p_resampler, input_frame_count)
}
